# golang-to-cpp-opaque

./: .gitignore
client/: Makefile  go.mod
client/cmd/: main.go
client/geometry/: geometry.go
src/libgeometry-c/: CMakeLists.txt
